--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-livereload": "^3.8.1",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
+    "gulp-webp": "^3.0.0",
     "stylelint": "8.4.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
